[gd_scene load_steps=13 format=3 uid="uid://bwgnwbba3uqoe"]

[ext_resource type="Texture2D" uid="uid://df562f8yno01x" path="res://Assets/Escenas_inicio/Escena1/Fondo.png" id="1_1t3oy"]
[ext_resource type="Script" uid="uid://ck7lmtg7csp04" path="res://Scripts/escena_3.gd" id="1_xg42m"]
[ext_resource type="Texture2D" uid="uid://8cbeeay5122w" path="res://Assets/Escenas_inicio/Escena3/Credencial.png" id="2_51ivf"]
[ext_resource type="Texture2D" uid="uid://b0xx5j4x8i4hb" path="res://Assets/Escenas_inicio/Escena3/Dialogo.png" id="3_qo2c3"]
[ext_resource type="Texture2D" uid="uid://cye8ngevosgse" path="res://Assets/Escenas_inicio/Escena3/Jefe.png" id="4_dnnu0"]
[ext_resource type="Texture2D" uid="uid://nntg1smfcyw6" path="res://Assets/Escenas_inicio/Escena3/Hombre.png" id="5_xwgqo"]
[ext_resource type="Texture2D" uid="uid://2qfaq0ns5thr" path="res://Assets/Escenas_inicio/Escena3/Mujer.png" id="6_xg42m"]
[ext_resource type="Texture2D" uid="uid://cpdw5fqw2ls85" path="res://Assets/Escenas_inicio/Escena3/Cambiar.png" id="7_duomu"]
[ext_resource type="Texture2D" uid="uid://cpqneu57mgvg3" path="res://Assets/Escenas_inicio/Escena3/Cambiar-hover.png" id="8_6sf12"]
[ext_resource type="FontFile" uid="uid://ju386i3tvfhc" path="res://Fonts/PatrickHand-Regular.ttf" id="9_q2ovm"]
[ext_resource type="Texture2D" uid="uid://bbb3hnnum4t88" path="res://Assets/Escenas_inicio/Escena1/Flecha.png" id="10_bib05"]
[ext_resource type="Texture2D" uid="uid://bogl0sof2h3ss" path="res://Assets/Escenas_inicio/Escena1/Flecha-hover.png" id="11_u6inb"]

[node name="Escena3" type="Node2D"]
script = ExtResource("1_xg42m")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(643, 360)
scale = Vector2(0.67, 0.67)
texture = ExtResource("1_1t3oy")

[node name="Credencial" type="Sprite2D" parent="."]
position = Vector2(648, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("2_51ivf")

[node name="Dialogo" type="Sprite2D" parent="."]
position = Vector2(644, 354)
scale = Vector2(0.67, 0.67)
texture = ExtResource("3_qo2c3")

[node name="Jefe" type="Sprite2D" parent="."]
position = Vector2(647, 361)
scale = Vector2(0.67, 0.67)
texture = ExtResource("4_dnnu0")

[node name="Hombre" type="Sprite2D" parent="."]
position = Vector2(649, 358)
scale = Vector2(0.67, 0.67)
texture = ExtResource("5_xwgqo")

[node name="Mujer" type="Sprite2D" parent="."]
position = Vector2(650, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("6_xg42m")

[node name="ButtonChange" type="TextureButton" parent="."]
offset_left = 806.0
offset_top = 203.0
offset_right = 936.0
offset_bottom = 333.0
scale = Vector2(0.67, 0.67)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_duomu")
texture_pressed = ExtResource("8_6sf12")
texture_hover = ExtResource("8_6sf12")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 111.0
offset_top = 210.0
offset_right = 394.0
offset_bottom = 468.0
theme_override_colors/default_color = Color(0.29803923, 0.22745098, 0.13333334, 1)
theme_override_fonts/normal_font = ExtResource("9_q2ovm")
theme_override_font_sizes/normal_font_size = 31
text = "Te doy la credencial para indicar que sos pasante, completa tus datos y usala mientras trabajes."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flecha" type="TextureButton" parent="."]
offset_left = 1102.0
offset_top = 540.0
offset_right = 1363.0
offset_bottom = 801.0
scale = Vector2(0.67, 0.67)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_bib05")
texture_pressed = ExtResource("11_u6inb")
texture_hover = ExtResource("11_u6inb")

[node name="LineEditNombre" type="LineEdit" parent="."]
offset_left = 583.0
offset_top = 501.0
offset_right = 905.0
offset_bottom = 541.0
theme_override_colors/font_color = Color(0.29411766, 0.22352941, 0.12941177, 1)
theme_override_colors/font_placeholder_color = Color(0.66987926, 0.42450464, 0.21709675, 1)
theme_override_fonts/font = ExtResource("9_q2ovm")
theme_override_font_sizes/font_size = 23
placeholder_text = "Ingresa tu nombre"
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
flat = true

[node name="LineEditApellido" type="LineEdit" parent="."]
offset_left = 580.0
offset_top = 584.0
offset_right = 897.0
offset_bottom = 624.0
theme_override_colors/font_color = Color(0.29803923, 0.22745098, 0.13333334, 1)
theme_override_colors/font_placeholder_color = Color(0.67058825, 0.42352942, 0.21568628, 1)
theme_override_fonts/font = ExtResource("9_q2ovm")
theme_override_font_sizes/font_size = 23
placeholder_text = "Ingresa tu apellido"
flat = true

[connection signal="pressed" from="ButtonChange" to="." method="_on_button_change_pressed"]
[connection signal="pressed" from="Flecha" to="." method="_on_flecha_pressed"]
